<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">TCPRemote</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_ip">Select a machine to connect</string>
    <string name="none_saved">No ips have been saved</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->

	<!-- Setup Activity -->
    <string name="server_name_label">Input a name for this server</string>
    <string name="saved_connections_button_label">Use a saved connection</string>
    <string name="server_ip_label">Input an ip for this server</string>
    <string name="or">or</string>
    <string name="connect_button_label">Save this connection and connect</string>
    <string name="delete_confirmation_title">Delete connection?</string>
    <string name="delete">Do you wish to delete this connection?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
